<resources>
    <string name="app_name">HotBoxPizza</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="acessar_conta">Acessar conta</string>
    <string name="verifique_seus_dados">Verifique seus dados</string>
    <string name="escolha_um_sabor">Escolha um sabor</string>
    <string name="portuguesa">Portuguesa</string>
    <string name="pizza_portuguesa">Pizza Portuguesa</string>
    <string name="r_28_90">R$ 28,90</string>
    <string name="nome_pizza">nomePizza</string>
    <string name="escolha_uma_pizza">Escolha uma Pizza</string>
    <string name="eu_um_subtitulo">Eu sou um subtitulo</string>
    <string name="gravar">Gravar</string>
    <string name="tempo_invalido">Tempo invalido</string>
    <string name="informe_seu_tempo">Informe seu tempo</string>
    <string name="configura_es">Configurações</string>
    <string name="tempo_alterado">Tempo alterado!</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="ingredientes_que_podem_ser_al_rgicos">Ingredientes que podem ser alérgicos</string>
    <string name="avalie">Avalie</string>
    <string name="config_splash_view">CONFIG. SPLASH VIEW</string>
</resources>
