<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/preto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/branco"
        android:text="@string/config_splash_view"
        android:padding="@dimen/lyt_titulo_config_splash"
        android:textSize="@dimen/lyt_titulo_config_txtSize"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/informe_seu_tempo"
        android:id="@+id/edtConfigSplash"
        android:layout_marginHorizontal="@dimen/lyt_titulo_config_marginHor"
        android:layout_marginTop="@dimen/lyt_titulo_config_marginTop"
        android:background="@color/branco"
        android:padding="@dimen/lyt_titulo_config_padding"
        android:textAlignment="center"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/lyt_btngravar_config_marginHor"
        android:text="@string/gravar"
        android:layout_marginTop="@dimen/lyt_btngravar_config_marginTop"
        android:backgroundTint="@color/vermelho"
        android:textColor="@color/branco"
        android:padding="@dimen/lyt_btngravar_config_padding"
        android:onClick="btnGravar"
        />

</LinearLayout>